Avoid breaks on figures and similar.

--- a/styl/minidocbook.styl
+++ b/styl/minidocbook.styl
@@ -16,6 +16,11 @@ html.minidocbook {
 			page-break-before: always;
 		}
 
+		// TODO: centralise for printing any kind of page
+		figure, table, pre {
+			page-break-inside: avoid;
+		}
+
 	}
 
 	&.refentry main h1 {
